@@ -709,7 +709,7 @@ directive:</p>
 <p>With the &quot;widths&quot; argument &quot;auto&quot; (or &quot;class&quot; value &quot;colwidths-auto&quot;),
 column widths are determined by the backend (if supported by the
 writer/backend).</p>
-<table class="colwidths-auto">
+<span id="target1"></span><table class="colwidths-auto" id="target2">
 <thead>
 <tr><th class="head"><p>A</p></th>
 <th class="head"><p>B</p></th>
